add deployment yaml files

--- a/deployment/env-secret.yaml
+++ b/deployment/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 stringData:
-  POSTGRES_USERNAME: secret_username
-  POSTGRES_PASSWORD: secret_password
+  POSTGRES_USERNAME: super_secret_username
+  POSTGRES_PASSWORD: super_secret_password
