--- a/deployment/frontend-deployment.yaml
+++ b/deployment/frontend-deployment.yaml
@@ -22,10 +22,16 @@ spec:
         - containerPort: 80        
         resources:
           requests:
-            memory: "500Mi"
+            memory: "64Mi"
             cpu: "250m"
           limits:
             memory: "1024Mi"
-            cpu: "500m" 
+            cpu: "500m"
+        env:
+        - name: SERVER_URL
+          valueFrom:
+            configMapKeyRef:
+              name: env-variables
+              key: SERVER_URL 
       restartPolicy: Always
     
