--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,5 +36,7 @@ services:
       URL: "http://localhost:8100"
   frontend:
     image: udagram-frontend:local
+    environment:
+      SERVER_URL: $SERVER_URL
     ports:
       - "8100:80"
