--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: aws_bucket
+  AWS_BUCKET: udagram-1337579
   AWS_PROFILE: default
   AWS_REGION: us-east-1
   JWT_SECRET: testing
   POSTGRES_DB: postgres
-  POSTGRES_HOST: postgres_host
-  URL: url
+  POSTGRES_HOST: udagram.cnk6jwfdyniz.us-east-1.rds.amazonaws.com
+  SERVER_URL: server_url
 metadata:
   name: env-variables
