--- a/deployment/backend-feed-service.yaml
+++ b/deployment/backend-feed-service.yaml
@@ -4,6 +4,10 @@ metadata:
   labels:
     app: backend-feed
   name: backend-feed
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: "/metrics"
+    prometheus.io/port: "80"
 spec:
   ports:
   - port: 8080
